--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,44 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <div id="sw-update-toast" aria-live="polite">
+    Updating to the latest version...
+  </div>
+  <style>
+    #sw-update-toast {
+      position: fixed;
+      left: 50%;
+      bottom: 24px;
+      transform: translateX(-50%);
+      background: rgba(20, 20, 20, 0.92);
+      color: #fff;
+      padding: 10px 14px;
+      border-radius: 8px;
+      font: 14px/1.3 "Segoe UI", Tahoma, Arial, sans-serif;
+      letter-spacing: 0.2px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.25);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 200ms ease;
+      z-index: 9999;
+    }
+    #sw-update-toast.is-visible {
+      opacity: 1;
+    }
+  </style>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.addEventListener('controllerchange', () => {
+        const toast = document.getElementById('sw-update-toast');
+        if (toast) {
+          toast.classList.add('is-visible');
+        }
+        setTimeout(() => {
+          window.location.reload();
+        }, 600);
+      });
+    }
+  </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
